# Vector

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: CompileOptions.cmake
include/vector/: vector.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  vector.cpp
